# MFT

./: .env.example  .gitignore  AGENTS.md  README.md  SCHEMA.md  batch.ts  build_db.ts  bun.lockb  data.ts  decompress.sh  fetch-relevant-index-options.ts  fetch_indiavix.py  fetch_relevant_index_options.py  fetch_underlyings_range.py  fetch_underlyings_range_validated.py  fyers-history.ts  package.json  probe_fyers_5s_modes.py  pyproject.toml  refresh_spot_candles_parquet.sh
nifty50/2026-03-12/: NSE_ADANIENT-EQ_2026-03-12_5s.json  NSE_ADANIPORTS-EQ_2026-03-12_5s.json  NSE_APOLLOHOSP-EQ_2026-03-12_5s.json  NSE_ASIANPAINT-EQ_2026-03-12_5s.json  NSE_AXISBANK-EQ_2026-03-12_5s.json  NSE_BAJAJ-AUTO-EQ_2026-03-12_5s.json  NSE_BAJAJFINSV-EQ_2026-03-12_5s.json  NSE_BAJFINANCE-EQ_2026-03-12_5s.json  NSE_BEL-EQ_2026-03-12_5s.json  NSE_BHARTIARTL-EQ_2026-03-12_5s.json  NSE_BPCL-EQ_2026-03-12_5s.json  NSE_BRITANNIA-EQ_2026-03-12_5s.json  NSE_CIPLA-EQ_2026-03-12_5s.json  NSE_COALINDIA-EQ_2026-03-12_5s.json  NSE_DRREDDY-EQ_2026-03-12_5s.json  NSE_EICHERMOT-EQ_2026-03-12_5s.json  NSE_GRASIM-EQ_2026-03-12_5s.json  NSE_HCLTECH-EQ_2026-03-12_5s.json  NSE_HDFCBANK-EQ_2026-03-12_5s.json  NSE_HDFCLIFE-EQ_2026-03-12_5s.json  NSE_HEROMOTOCO-EQ_2026-03-12_5s.json  NSE_HINDALCO-EQ_2026-03-12_5s.json  NSE_HINDUNILVR-EQ_2026-03-12_5s.json  NSE_ICICIBANK-EQ_2026-03-12_5s.json  NSE_INDUSINDBK-EQ_2026-03-12_5s.json  NSE_INFY-EQ_2026-03-12_5s.json  NSE_ITC-EQ_2026-03-12_5s.json  (+23 more)
src/: cli.py  models.py  visualize.py
tests/: test_data.py  test_features.py  test_live.py  test_strategies.py
(+61 files in other folders)
