[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nifty-scalper"
version = "0.1.0"
description = "Research-first NIFTY 5s options scalping platform"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "click>=8.1.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
collect-history = "src.cli:collect_history"
build-dataset = "src.cli:build_dataset"
backtest = "src.cli:backtest"
paper-trade = "src.cli:paper_trade"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
